tests/snapshots/init__codeforces_output.snap
---
source: tests/init.rs
expression: output
---
       Wrote {{ cwd }}{{ main_path_separator }}.{{ main_path_separator }}compete.toml
       Wrote {{ cwd }}{{ main_path_separator }}.{{ main_path_separator }}rust-toolchain
       Wrote {{ cwd }}{{ main_path_separator }}.{{ main_path_separator }}.cargo{{ main_path_separator }}config.toml

